--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'org.pytorch:pytorch_android_lite:1.12.1'
+    implementation 'com.google.android.material:material:1.7.0'
 }
